MDEV-29638  Crash when considering Split-Materialized plan

When we have a grouping select within a derived table and a potential
range scan on that same derived table, we can construct a quick select
structure for a potential access method.  make_join_select() can decide
that a different access method is to be used and discard this structure,
free-ing it up and setting it's pointer to nullptr.  Prior to this,
though, the pointer is copied into a positions array in our join
structure.  When the above happens within the context of a derived
table, best_access_path() can again re-evaluate this now invalid pointer,
causing a seg-fault.

This problem is caused by making a policy decision out of order,
make_join_select() is effectively making an access method choice,
removing the option to use quick select, where another, more outward
optimization hasn't even determined table join order.

We really should consider removing this from make_join_select(), but
this commit simply bans removal of this quick select if we might be
again re-evaluate join order (i.e. this join is
with_two_phase_optimization).